--- a/js_ajax/ajax_training/index.html
+++ b/js_ajax/ajax_training/index.html
@@ -9,6 +9,7 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>AJAX</title>
   </head>
   <body>
