--- a/js_ajax/ajax_training/index.html
+++ b/js_ajax/ajax_training/index.html
@@ -10,6 +10,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/superagent/4.1.0/superagent.min.js"></script>
     <title>AJAX</title>
   </head>
   <body>
