Add the list of questions

--- a/js-single-page-app/index.html
+++ b/js-single-page-app/index.html
@@ -15,13 +15,13 @@
   <body>
     <div class="ui container">
       <div class="ui secondary pointing menu navbar">
-        <a class="active item">
+        <a class="active item" data-target="welcome">
           Welcome
         </a>
-        <a class="item">
+        <a class="item" data-target="question-index">
           Questions
         </a>
-        <a class="item">
+        <a class="item" data-target="question-new">
           New Question
         </a>
       </div>
