fetched and rendered a single question on page

--- a/js-single-page-app/index.html
+++ b/js-single-page-app/index.html
@@ -35,7 +35,7 @@
         </section>
         <!-- Question show section -->
         <section class="page" id="question-show"></section>
-        <!-- Question Index section -->
+        <!-- Questions Index section -->
         <section class="page" id="question-index">
           <div class="ui header">Questions</div>
           <div class="ui list question-list"></div>
