--- a/js-single-page-app/index.html
+++ b/js-single-page-app/index.html
@@ -71,6 +71,7 @@
         <section class="page" id="question-edit">
           <div class="ui header">Edit Question</div>
           <form class="ui form" id="edit-question-form">
+            <input type="hidden" name="id" id="id" />
             <div class="field">
               <label for="title">Title</label>
               <input
